# ECP-CVC-DPM

./: CMakeLists.txt  DPM_opencv.sublime-project  DPM_opencv.sublime-workspace  OpenDPMConfig.cmake.in
src/latentsvm/: CLSvmDetector.cpp  CLSvmDetector.h  CMakeLists.txt  latentsvm_multidetect.cpp  lsvm_exe_backup.cpp
src/libdpm/: CMakeLists.txt  _lsvm_types.h  latentsvm.cpp  latentsvmdetector.cpp  lsvmparser.cpp  matching.cpp  objdetect.hpp
src/libdpm_ecp/: CLSVMDetector.cpp  CLSVMDetector.h  CMakeLists.txt  LibLSVM.cpp  LibLSVM.hpp  LibPartFilter.cpp  LibPartFilter.h  LibPyramid.cpp  LibPyramid.h
src/libffld/: CFFLD.cpp  CFFLD.h  CMakeLists.txt  HOGPyramid.cpp  JPEGImage.cpp  JPEGImage.h  Mixture.cpp  Mixture.h  Model.cpp  Model.h  Patchwork.cpp  Rectangle.h  ffld.cpp  test.cpp
src/libffld/CvLSVMRead/: _lsvm_types.h  _lsvmparser.h  lsvmparser.cpp  precomp.hpp
src/libutil/: CMakeLists.txt  CStopwatch.cpp  CStopwatch.h
